--- a/style.css
+++ b/style.css
@@ -32,10 +32,14 @@ body{
 
 .card h1{
     color: var(--white);
+    font-size: 28px;
+    margin-bottom: 15px;
 }
 
 .card p{
     color: var(--light-grey);
+    font-size: 15px;
+    line-height: 24px;
 }
 
 .estrela{
@@ -44,5 +48,13 @@ body{
     height: 48px;
 
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     
+    border-radius: 50%;
+
+
+    margin-bottom: 30px;
 }
